<?xml version="1.0"?>
<package format="2">
  <name>rocket_visualizer</name>
  <version>2.0.0</version>
  <description>The rocket visualizer package</description>
  <author>Joshua Näf</author>
  <maintainer email="naefjo@ethz.ch">Joshua Näf</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD 2-Clause </license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>crs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ros_crs_utils</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
